--- a/buildSrc/src/main/groovy/service.spring-conventions.gradle
+++ b/buildSrc/src/main/groovy/service.spring-conventions.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'service.java-conventions'
+	id 'project.java-conventions'
 	id 'org.springframework.boot'
 	id 'io.spring.dependency-management'
 }
