--- a/rent-service/build.gradle
+++ b/rent-service/build.gradle
@@ -1,3 +1,8 @@
 plugins {
 	id 'service.spring-conventions'
 }
+
+dependencies {
+	implementation project(':common')
+	implementation project(':rent-service-api')
+}
