build: add lombok dependency to the java conventions

--- a/buildSrc/src/main/groovy/project.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/project.java-conventions.gradle
@@ -8,3 +8,8 @@ repositories {
 	mavenLocal()
 	mavenCentral()
 }
+
+dependencies {
+	compileOnly 'org.projectlombok:lombok:1.18.20'
+	annotationProcessor 'org.projectlombok:lombok:1.18.20'
+}
