--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,3 +1,14 @@
 plugins {
     id 'project.java-conventions'
+    id 'org.springframework.boot'
+    id 'io.spring.dependency-management'
 }
+
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+}
+
+// This module doesn't have a main class
+bootJar.enabled = false
+jar.enabled = true
