build: reorganize gradle conventions
- add a convention for api modules
- merge project.common-conventions and project.java-conventions
- add spring starter validation to service.spring-conventions

--- a/buildSrc/src/main/groovy/project.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/project.java-conventions.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'project.common-conventions'
+	id 'idea'
 	id 'java'
 }
 
@@ -13,4 +13,10 @@ repositories {
 dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.20'
 	annotationProcessor 'org.projectlombok:lombok:1.18.20'
+}
+
+idea {
+	module {
+		downloadJavadoc = true
+	}
 }
