--- a/buildSrc/src/main/groovy/service.spring-conventions.gradle
+++ b/buildSrc/src/main/groovy/service.spring-conventions.gradle
@@ -6,8 +6,11 @@ plugins {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
 test {
