--- a/buildSrc/src/main/groovy/service.spring-conventions.gradle
+++ b/buildSrc/src/main/groovy/service.spring-conventions.gradle
@@ -1,7 +1,6 @@
 plugins {
 	id 'project.java-conventions'
-	id 'org.springframework.boot'
-	id 'io.spring.dependency-management'
+	id 'project.spring-conventions'
 }
 
 dependencies {
