--- a/buildSrc/src/main/groovy/api.spring-conventions.gradle
+++ b/buildSrc/src/main/groovy/api.spring-conventions.gradle
@@ -7,3 +7,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
+
+// Api modules don't have a main class
+bootJar.enabled = false
+jar.enabled = true
