--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -9,4 +9,5 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-gradle-plugin:2.5.3'
 	implementation 'io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE'
+	implementation 'org.unbroken-dome.gradle-plugins:gradle-testsets-plugin:4.0.0'
 }
