--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,12 +1,6 @@
 plugins {
     id 'project.java-conventions'
-    id 'org.springframework.boot'
-    id 'io.spring.dependency-management'
-}
-
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    id 'project.spring-conventions'
 }
 
 // This module doesn't have a main class
