--- a/rent-service/build.gradle
+++ b/rent-service/build.gradle
@@ -6,4 +6,13 @@ plugins {
 dependencies {
 	implementation project(':common')
 	implementation project(':rent-service-api')
+
+	annotationProcessor 'org.hibernate:hibernate-jpamodelgen:5.4.32.Final'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.postgresql:postgresql:42.2.23'
+
+	integrationTestImplementation 'org.testcontainers:testcontainers:1.16.0'
+	integrationTestImplementation 'org.testcontainers:junit-jupiter:1.16.0'
+	integrationTestImplementation "org.testcontainers:postgresql:1.16.0"
 }
+
