--- a/common/build.gradle
+++ b/common/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id 'project.spring-conventions'
 }
 
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+}
+
 // This module doesn't have a main class
 bootJar.enabled = false
 jar.enabled = true
