feat: add a custom smt transformer for debezium connect

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ rootProject.name = 'car-sharing'
 include 'common'
 include 'rent-service'
 include 'rent-service-api'
+include 'custom-debezium-transformer'
