--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'car-sharing'
 
 include 'common'
+include 'common-spring'
 include 'rent-service'
 include 'rent-service-api'
 include 'custom-debezium-transformer'
