--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -11,4 +11,5 @@ dependencies {
 	implementation 'io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE'
 	implementation 'org.unbroken-dome.gradle-plugins:gradle-testsets-plugin:4.0.0'
 	implementation 'gradle.plugin.io.quarkus:quarkus-gradle-plugin:2.2.1.Final'
+	implementation 'org.kordamp.gradle:jandex-gradle-plugin:0.11.0'
 }
