--- a/buildSrc/src/main/groovy/service.quarkus-conventions.gradle
+++ b/buildSrc/src/main/groovy/service.quarkus-conventions.gradle
@@ -6,6 +6,8 @@ dependencies {
     implementation 'io.quarkus:quarkus-arc'
 
     testImplementation 'io.quarkus:quarkus-junit5'
+    testImplementation 'io.quarkus:quarkus-junit5-mockito'
     testImplementation 'org.mockito:mockito-junit-jupiter:3.12.4'
     testImplementation 'org.assertj:assertj-core:3.20.2'
+    testImplementation 'io.rest-assured:rest-assured:4.4.0'
 }
