--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,6 @@
 group = it.vincenzocorso
 version = 0.1.0
+
+quarkus.container-image.build = true
+quarkus.container-image.group = vincenzocorso
+quarkus.container-image.name = car-sharing/${quarkus.application.name:unset}
