--- a/rent-service/src/main/resources/application.properties
+++ b/rent-service/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.url = jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${PO
 spring.datasource.username = ${POSTGRES_USERNAME}
 spring.datasource.password = ${POSTGRES_PASSWORD}
 spring.jpa.hibernate.ddl-auto = update
+
+camunda.bpm.admin-user.id = admin
+camunda.bpm.admin-user.password = password
+
+logging.level.it.vincenzocorso = DEBUG
