--- a/settings.gradle
+++ b/settings.gradle
@@ -3,8 +3,10 @@ rootProject.name = 'car-sharing'
 include 'common'
 include 'common-spring'
 
+include 'customer-service'
 include 'customer-service-api'
 
 include 'rent-service'
 include 'rent-service-api'
+
 include 'custom-debezium-transformer'
