--- a/rent-service/build.gradle
+++ b/rent-service/build.gradle
@@ -11,6 +11,8 @@ dependencies {
 	annotationProcessor 'org.hibernate:hibernate-jpamodelgen:5.4.32.Final'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.postgresql:postgresql:42.2.23'
+	implementation 'org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter:7.15.0'
+	implementation 'org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-webapp:7.15.0'
 
 	integrationTestImplementation 'org.testcontainers:testcontainers:1.16.0'
 	integrationTestImplementation 'org.testcontainers:junit-jupiter:1.16.0'
