--- a/rent-service/build.gradle
+++ b/rent-service/build.gradle
@@ -14,6 +14,5 @@ dependencies {
 
 	integrationTestImplementation 'org.testcontainers:testcontainers:1.16.0'
 	integrationTestImplementation 'org.testcontainers:junit-jupiter:1.16.0'
-	integrationTestImplementation "org.testcontainers:postgresql:1.16.0"
+	integrationTestImplementation 'org.testcontainers:postgresql:1.16.0'
 }
-
