build: add jib convention in spring services
refactor image build conventions

--- a/buildSrc/src/main/groovy/java.build-conventions.gradle
+++ b/buildSrc/src/main/groovy/java.build-conventions.gradle
@@ -14,3 +14,8 @@ repositories {
 dependencies {
     integrationTestImplementation sourceSets.test.output
 }
+
+project.ext {
+    imageName = rootProject.name + '/' + project.name
+    imageTag = 'latest'
+}
