--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -12,4 +12,5 @@ dependencies {
 	implementation 'org.unbroken-dome.gradle-plugins:gradle-testsets-plugin:4.0.0'
 	implementation 'gradle.plugin.io.quarkus:quarkus-gradle-plugin:2.2.1.Final'
 	implementation 'org.kordamp.gradle:jandex-gradle-plugin:0.11.0'
+	implementation 'gradle.plugin.com.google.cloud.tools:jib-gradle-plugin:3.2.0'
 }
