--- a/buildSrc/src/main/groovy/project.spring-conventions.gradle
+++ b/buildSrc/src/main/groovy/project.spring-conventions.gradle
@@ -4,6 +4,7 @@ plugins {
 }
 
 dependencies {
+    implementation enforcedPlatform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
