--- a/rent-orchestrator-service/build.gradle
+++ b/rent-orchestrator-service/build.gradle
@@ -5,8 +5,13 @@ plugins {
 
 dependencies {
     implementation project(':common')
+    implementation(project(':rent-service-api')) {
+        exclude group: 'ch.qos.logback', module: 'logback-core'
+        exclude group: 'ch.qos.logback', module: 'logback-classic'
+    }
 
     implementation 'io.temporal:temporal-sdk:1.8.0'
+    implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-kafka'
 
     integrationTestImplementation 'org.testcontainers:testcontainers:1.16.0'
     integrationTestImplementation 'org.testcontainers:junit-jupiter:1.16.0'
