--- a/buildSrc/src/main/groovy/project.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/project.java-conventions.gradle
@@ -4,7 +4,10 @@ plugins {
 	id 'java'
 }
 
-sourceCompatibility = '11'
+java {
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
+}
 
 dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.20'
