fix(custom-debezium-transformer): set java 11 for this module
The debezium/connect images use jdk11. If the custom transformer use java 17, the plugin is not loaded

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,3 +1,10 @@
 plugins {
     id 'project.java-conventions'
 }
+
+// TODO: wait for a fix
+// See: /custom-debezium-transformer/build.gradle
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
