build: update docker compose setup

--- a/custom-debezium-transformer/Dockerfile
+++ b/custom-debezium-transformer/Dockerfile
@@ -1,4 +1,4 @@
-FROM debezium/connect:1.6
+FROM debezium/connect:1.9.7.Final
 ENV DEBEZIUM_DIR=$KAFKA_CONNECT_PLUGINS_DIR/debezium-transformer
 
 RUN mkdir $DEBEZIUM_DIR
