--- a/customer-service/build.gradle
+++ b/customer-service/build.gradle
@@ -8,7 +8,7 @@ dependencies {
 
     implementation 'io.quarkus:quarkus-mongodb-panache'
 
-    integrationTestImplementation 'org.testcontainers:testcontainers:1.16.0'
-    integrationTestImplementation 'org.testcontainers:junit-jupiter:1.16.0'
-    integrationTestImplementation 'org.testcontainers:mongodb:1.16.0'
+    intTestImplementation 'org.testcontainers:testcontainers:1.16.0'
+    intTestImplementation 'org.testcontainers:junit-jupiter:1.16.0'
+    intTestImplementation 'org.testcontainers:mongodb:1.16.0'
 }
