--- a/rent-orchestrator-service/build.gradle
+++ b/rent-orchestrator-service/build.gradle
@@ -9,6 +9,6 @@ dependencies {
     implementation 'io.temporal:temporal-sdk:1.8.0'
     implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-kafka'
 
-    integrationTestImplementation 'org.testcontainers:testcontainers:1.16.0'
-    integrationTestImplementation 'org.testcontainers:junit-jupiter:1.16.0'
+    intTestImplementation 'org.testcontainers:testcontainers:1.16.0'
+    intTestImplementation 'org.testcontainers:junit-jupiter:1.16.0'
 }
