--- a/rent-service/build.gradle
+++ b/rent-service/build.gradle
@@ -11,7 +11,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.postgresql:postgresql:42.2.23'
 
-	integrationTestImplementation 'org.testcontainers:testcontainers:1.16.0'
-	integrationTestImplementation 'org.testcontainers:junit-jupiter:1.16.0'
-	integrationTestImplementation 'org.testcontainers:postgresql:1.16.0'
+	intTestImplementation 'org.testcontainers:testcontainers:1.16.0'
+	intTestImplementation 'org.testcontainers:junit-jupiter:1.16.0'
+	intTestImplementation 'org.testcontainers:postgresql:1.16.0'
 }
