feat(customer-service): added publishing of customer created events

--- a/customer-service/build.gradle
+++ b/customer-service/build.gradle
@@ -5,6 +5,7 @@ plugins {
 
 dependencies {
     implementation project(':common')
+    implementation project(':common-quarkus:runtime')
 
     implementation 'io.quarkus:quarkus-mongodb-panache'
 
