--- a/customer-service/build.gradle
+++ b/customer-service/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 dependencies {
     implementation project(':common')
-    implementation project(':common-quarkus:runtime')
+    implementation project(':common-quarkus:outbox-mongo-extension:runtime')
 
     implementation 'io.quarkus:quarkus-mongodb-panache'
 
