refactor(rent-orchestrator-service): changed the implementation of the orchestrator

--- a/rent-orchestrator-service/src/main/resources/application.properties
+++ b/rent-orchestrator-service/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+quarkus.datasource.db-kind = postgresql
+quarkus.datasource.username = ${POSTGRES_USERNAME}
+quarkus.datasource.password = ${POSTGRES_PASSWORD}
+quarkus.datasource.jdbc.url = jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}
+quarkus.hibernate-orm.database.generation = update
+
 kafka.bootstrap.servers = ${KAFKA_BOOSTRAP_SERVERS}
+
+temporal.host = ${TEMPORAL_HOST}
+temporal.port = ${TEMPORAL_PORT}
+
+# set the log level to debug for the package it.vincenzocorso.carsharing
+quarkus.log.category."it.vincenzocorso.carsharing".level = DEBUG
