--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 version: "3.9"
-# TODO: set max HEAP
 services:
   mongodb-primary:
     image: bitnami/mongodb:4.4.8-debian-10-r48
@@ -146,9 +145,14 @@ services:
       - temporal
       - kafka
     environment:
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: 5432
+      POSTGRES_DATABASE: db
+      POSTGRES_USERNAME: admin
+      POSTGRES_PASSWORD: admin
+      KAFKA_BOOSTRAP_SERVERS: kafka:9092
       TEMPORAL_HOST: temporal
       TEMPORAL_PORT: 7233
-      KAFKA_BOOSTRAP_SERVERS: kafka:9092
 
   customer-service:
     container_name: customer-service
