--- a/rent-orchestrator-service/build.gradle
+++ b/rent-orchestrator-service/build.gradle
@@ -5,9 +5,12 @@ plugins {
 
 dependencies {
     implementation project(':common')
+    implementation project(':common-quarkus:outbox-jpa-extension:runtime')
 
     implementation 'io.temporal:temporal-sdk:1.8.0'
     implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-kafka'
+    implementation 'io.quarkus:quarkus-hibernate-orm-panache'
+    implementation 'io.quarkus:quarkus-jdbc-postgresql'
 
     intTestImplementation 'org.testcontainers:testcontainers:1.16.0'
     intTestImplementation 'org.testcontainers:junit-jupiter:1.16.0'
