--- a/customer-service/customer-service-asyncapi.yaml
+++ b/customer-service/customer-service-asyncapi.yaml
@@ -74,15 +74,11 @@ channels:
           type: object
           description: This reply contains the result of the verification
           properties:
-            customerId:
-              type: string
-              description: The customer id
             canRent:
               type: boolean
               description: True if the customer can rent a vehicle, false otherwise
           examples:
-            - customerId: CST1234
-              canRent: true
+            - canRent: true
 components:
   schemas:
     EventHeaders:
