--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -135,6 +135,7 @@ services:
       POSTGRES_DATABASE: db
       POSTGRES_USERNAME: admin
       POSTGRES_PASSWORD: admin
+      KAFKA_BOOSTRAP_SERVERS: kafka:9092
 
   rent-orchestrator-service:
     container_name: rent-orchestrator-service
