--- a/rent-service/build.gradle
+++ b/rent-service/build.gradle
@@ -9,6 +9,7 @@ dependencies {
 
 	annotationProcessor 'org.hibernate:hibernate-jpamodelgen:6.1.6.Final'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'org.postgresql:postgresql:42.2.23'
 
 	intTestImplementation 'org.testcontainers:testcontainers:1.16.0'
