--- a/rent-service/src/main/resources/application.properties
+++ b/rent-service/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.datasource.username = ${POSTGRES_USERNAME}
 spring.datasource.password = ${POSTGRES_PASSWORD}
 spring.jpa.hibernate.ddl-auto = update
 
+spring.kafka.consumer.group-id = rent-service
+spring.kafka.consumer.bootstrap-servers = ${KAFKA_BOOSTRAP_SERVERS}
+
 logging.level.it.vincenzocorso = DEBUG
