build: reorganize gradle conventions

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 	implementation 'io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE'
 	implementation 'org.unbroken-dome.gradle-plugins:gradle-testsets-plugin:4.0.0'
 	implementation 'io.quarkus:gradle-application-plugin:2.16.1.Final'
+	implementation 'io.quarkus.extension:gradle-extension-plugin:2.16.1.Final'
 	implementation 'org.kordamp.gradle:jandex-gradle-plugin:0.11.0'
 	implementation 'gradle.plugin.com.google.cloud.tools:jib-gradle-plugin:3.2.0'
 }
