--- a/vehicle-service/build.gradle
+++ b/vehicle-service/build.gradle
@@ -5,11 +5,14 @@ plugins {
 
 dependencies {
     implementation project(':common')
-    implementation project(':common-quarkus:outbox-jpa-extension:runtime')
+    implementation project(':common-quarkus:outbox-mongo-extension:runtime')
 
     implementation 'io.quarkus:quarkus-resteasy'
     implementation 'io.quarkus:quarkus-resteasy-jackson'
     implementation 'io.quarkus:quarkus-hibernate-validator'
-    implementation 'io.quarkus:quarkus-hibernate-orm-panache'
-    implementation 'io.quarkus:quarkus-jdbc-postgresql'
+    implementation 'io.quarkus:quarkus-mongodb-panache'
+
+    intTestImplementation 'org.testcontainers:testcontainers:1.16.0'
+    intTestImplementation 'org.testcontainers:junit-jupiter:1.16.0'
+    intTestImplementation 'org.testcontainers:mongodb:1.16.0'
 }
