fix(vehicle-service): avoid load mongo in unit tests annotated with @QuarkusTest

--- a/vehicle-service/src/test/resources/application.properties
+++ b/vehicle-service/src/test/resources/application.properties
@@ -1,3 +1,6 @@
 # Set a random http port during tests to avoid conflicts during parallel gradle builds
 # See: https://github.com/quarkusio/quarkus/issues/28563
 quarkus.http.test-port = 0
+
+# To avoid load mongo when using @QuarkusTest
+quarkus.arc.exclude-types = it.vincenzocorso.carsharing.vehicleservice.config.MongoConfig
