--- a/.github/workflows/vehicle-service-workflow.yaml
+++ b/.github/workflows/vehicle-service-workflow.yaml
@@ -8,6 +8,8 @@ on:
       - common/**
       - common-quarkus/**
       - buildSrc/**
+    paths-ignore:
+      - vehicle-service/docs/**
 jobs:
   execute:
     runs-on: ubuntu-22.04
