--- a/vehicle-service/build.gradle
+++ b/vehicle-service/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     implementation 'io.quarkus:quarkus-resteasy-jackson'
     implementation 'io.quarkus:quarkus-hibernate-validator'
     implementation 'io.quarkus:quarkus-mongodb-panache'
+    implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-kafka'
 
     intTestImplementation 'org.testcontainers:testcontainers:1.16.0'
     intTestImplementation 'org.testcontainers:junit-jupiter:1.16.0'
