--- a/vehicle-service/src/main/resources/application.properties
+++ b/vehicle-service/src/main/resources/application.properties
@@ -2,3 +2,5 @@ quarkus.mongodb.connection-string = mongodb://${MONGODB_HOSTS}
 quarkus.mongodb.database = ${MONGODB_DATABASE}
 quarkus.mongodb.credentials.username= ${MONGODB_USERNAME}
 quarkus.mongodb.credentials.password= ${MONGODB_PASSWORD}
+
+%prod.kafka.bootstrap.servers = ${KAFKA_BOOSTRAP_SERVERS}
